k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    app.kubernetes.io/part-of: techcup
    environment: ${ENVIRONMENT}
